feat: integrate lead source across app and refine dashboard UI

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -94,6 +94,7 @@
         }
     },
     "common": {
+        "greeting": "Great to see you again, {{name}}!",
         "loading": "Loading...",
         "cancel": "Cancel",
         "save": "Save",
