fix: harden simulation logic and add missing sidebar translations

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -20,6 +20,7 @@
     "sidebar": {
         "dashboard": "Panel Principal",
         "leads": "Leads",
+        "quotes": "Cotizaciones",
         "calendar": "Calendario",
         "companies": "Empresas",
         "team": "Equipo",
